feat: Complete LiDAR module implementation
Backend:
- Conda/Mamba Dockerfile with PDAL, GDAL, py3dtiles
- PNOA coverage spatial index with PostGIS
- 4-phase processing pipeline (ingest, spectral, trees, tiling)
- RQ worker for async heavy processing
- API endpoints: /process, /upload, /status, /coverage, /layers
- Orion-LD integration for PointCloudLayer and AgriTree entities
- MinIO storage for 3D Tiles

Frontend:
- API client with job polling
- LidarContext with state management
- LidarLayer with EDL and dynamic color styling
- LidarLayerControl with PNOA download and file upload
- LidarConfig with results display
- TreeInfo component for tree details

Kubernetes:
- Separate API and Worker deployments
- Higher resources for worker (8Gi RAM)

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nekazari-module-template",
+  "name": "nkz-module-lidar",
   "version": "1.0.0",
-  "description": "Nekazari Module Template - Quick Start",
+  "description": "LIDAR Point Cloud Viewer for Nekazari Platform - Visualize LAZ files from IDENA in CesiumJS",
   "license": "Apache-2.0",
   "type": "module",
   "main": "./src/App.tsx",
   "scripts": {
-    "dev": "vite --port 5003",
+    "dev": "vite --port 5004",
     "build": "vite build",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit"
