--- a/manifest.json
+++ b/manifest.json
@@ -1,44 +1,81 @@
 {
-  "id": "hello-world",
-  "name": "hello-world",
-  "display_name": "Hello World Module",
+  "id": "lidar",
+  "name": "lidar",
+  "display_name": "LIDAR Point Cloud Viewer",
   "version": "1.0.0",
-  "description": "A simple Hello World module demonstrating NKZ Platform module development. This is a template that you can customize for your own module.",
-  "short_description": "Your first Nekazari module",
+  "description": "Visualize LIDAR point cloud data from IDENA in the unified CesiumJS viewer. Download and convert LAZ files to 3D Tiles for interactive visualization.",
+  "short_description": "LIDAR point cloud visualization for parcel analysis",
   "author": {
-    "name": "Your Name",
-    "email": "your.email@example.com",
-    "organization": "Your Organization (optional)"
+    "name": "Nekazari Team",
+    "email": "nekazari@artotxiki.com",
+    "organization": "Nekazari"
   },
-  "category": "custom",
-  "module_type": "ADDON_FREE",
-  "required_plan_type": "basic",
-  "pricing_tier": "FREE",
-  "route_path": "/hello-world",
-  "label": "Hello World",
-  "icon": "sparkles",
+  "category": "analytics",
+  "module_type": "ADDON_PAID",
+  "required_plan_type": "premium",
+  "pricing_tier": "PAID",
+  "route_path": "/lidar",
+  "label": "LIDAR",
+  "icon": "layers",
   "icon_url": "assets/icon.png",
   "required_roles": ["Farmer", "TenantAdmin", "PlatformAdmin"],
   "dependencies": {
     "sdk_version": "^1.0.0",
     "react_version": "^18.3.1",
-    "platform_version": "^1.0.0"
+    "platform_version": "^2.0.0"
   },
   "permissions": {
-    "api_access": [],
-    "storage_access": false,
-    "external_requests": []
+    "api_access": [
+      "/api/lidar/*"
+    ],
+    "storage_access": true,
+    "external_requests": [
+      "https://idena.navarra.es"
+    ]
   },
   "build_config": {
     "type": "remote",
-    "remote_entry_url": "/modules/hello-world/assets/remoteEntry.js",
-    "scope": "hello_world_module",
+    "remote_entry_url": "/modules/lidar/assets/remoteEntry.js",
+    "scope": "lidar_module",
     "exposed_module": "./App"
   },
   "metadata": {
-    "icon": "✨",
-    "color": "#3B82F6",
-    "features": ["Hello World", "Basic Module Structure"],
-    "screenshots": []
+    "icon": "📊",
+    "color": "#6366F1",
+    "features": [
+      "LIDAR point cloud visualization",
+      "IDENA LAZ file download",
+      "3D Tiles conversion",
+      "Interactive point cloud analysis",
+      "Parcel-based LIDAR data",
+      "CesiumJS integration"
+    ],
+    "screenshots": [],
+    "slots": {
+      "layer-toggle": [
+        {
+          "id": "lidar-layer-control",
+          "component": "LidarLayerControl",
+          "priority": 10
+        }
+      ],
+      "map-layer": [
+        {
+          "id": "lidar-cesium-layer",
+          "component": "LidarLayer",
+          "priority": 10
+        }
+      ],
+      "context-panel": [
+        {
+          "id": "lidar-config",
+          "component": "LidarConfig",
+          "priority": 20,
+          "showWhen": {
+            "entityType": ["AgriParcel"]
+          }
+        }
+      ]
+    }
   }
 }
