--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,8 +24,8 @@ redis==5.0.1
 boto3==1.34.14
 botocore==1.34.14
 
-# HTTP client
-httpx==0.26.0
+# HTTP client (ngsildclient requires httpx<0.24.0)
+httpx==0.23.3
 requests==2.31.0
 
 # NGSI-LD / Orion integration
