--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -39,35 +39,35 @@ spec:
             - name: http
               containerPort: 8000
           env:
-            # Database
+            # Database (use existing postgresql-secret)
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: nekazari-db-credentials
+                  name: postgresql-secret
                   key: postgres-url
             # Redis
             - name: REDIS_URL
-              value: "redis://redis:6379/0"
-            # MinIO
+              value: "redis://redis-service:6379/0"
+            # MinIO (use existing minio-secret)
             - name: MINIO_ENDPOINT
-              value: "minio:9000"
+              value: "minio-service:9000"
             - name: MINIO_ACCESS_KEY
               valueFrom:
                 secretKeyRef:
-                  name: minio-credentials
-                  key: access-key
+                  name: minio-secret
+                  key: root-user
             - name: MINIO_SECRET_KEY
               valueFrom:
                 secretKeyRef:
-                  name: minio-credentials
-                  key: secret-key
+                  name: minio-secret
+                  key: root-password
             - name: MINIO_BUCKET
               value: "lidar-tilesets"
             - name: TILESET_PUBLIC_URL
-              value: "https://nkz.artotxiki.com/lidar-tilesets"
+              value: "https://nkz.artotxiki.com/api/lidar/tilesets"
             # Orion-LD
             - name: ORION_URL
-              value: "http://orion-ld:1026"
+              value: "http://orion-ld-service:1026"
             # Authentication (Keycloak)
             - name: KEYCLOAK_URL
               value: "https://auth.artotxiki.com/auth"
@@ -100,8 +100,7 @@ spec:
             periodSeconds: 5
 
 ---
-# Deployment: LIDAR Worker (RQ)
-# Separate deployment for heavy processing to avoid blocking API
+# Deployment: LIDAR Worker (RQ) - reduced resources for single-node
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -137,44 +136,44 @@ spec:
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: nekazari-db-credentials
+                  name: postgresql-secret
                   key: postgres-url
             # Redis
             - name: REDIS_URL
-              value: "redis://redis:6379/0"
+              value: "redis://redis-service:6379/0"
             # MinIO
             - name: MINIO_ENDPOINT
-              value: "minio:9000"
+              value: "minio-service:9000"
             - name: MINIO_ACCESS_KEY
               valueFrom:
                 secretKeyRef:
-                  name: minio-credentials
-                  key: access-key
+                  name: minio-secret
+                  key: root-user
             - name: MINIO_SECRET_KEY
               valueFrom:
                 secretKeyRef:
-                  name: minio-credentials
-                  key: secret-key
+                  name: minio-secret
+                  key: root-password
             - name: MINIO_BUCKET
               value: "lidar-tilesets"
             - name: TILESET_PUBLIC_URL
-              value: "https://nkz.artotxiki.com/lidar-tilesets"
+              value: "https://nkz.artotxiki.com/api/lidar/tilesets"
             # Orion-LD
             - name: ORION_URL
-              value: "http://orion-ld:1026"
+              value: "http://orion-ld-service:1026"
             # Worker settings
             - name: WORKER_QUEUE_NAME
               value: "lidar-processing"
             - name: WORKER_TIMEOUT
               value: "1800"
           resources:
-            # Workers need more resources for PDAL/py3dtiles
+            # Reduced for single-node cluster
             requests:
-              memory: "2Gi"
-              cpu: "500m"
+              memory: "512Mi"
+              cpu: "100m"
             limits:
-              memory: "8Gi"
-              cpu: "2000m"
+              memory: "2Gi"
+              cpu: "1000m"
 
 ---
 # Service: LIDAR Module API
