--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -129,14 +129,12 @@ spec:
         - name: worker
           image: ghcr.io/k8-benetis/nkz-module-lidar/lidar-backend:latest
           imagePullPolicy: Always
-          # Override command to run RQ worker (full path required - not in default PATH)
+          # Use shell to read REDIS_URL env var (includes password from secret)
           command:
             [
-              "/opt/conda/bin/rq",
-              "worker",
-              "lidar-processing",
-              "--url",
-              "redis://redis-service:6379/0",
+              "/bin/sh",
+              "-c",
+              "/opt/conda/bin/rq worker lidar-processing --url $REDIS_URL",
             ]
           env:
             # Database
@@ -145,9 +143,14 @@ spec:
                 secretKeyRef:
                   name: postgresql-secret
                   key: postgres-url
-            # Redis
+            # Redis (with password from secret)
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: redis-secret
+                  key: password
             - name: REDIS_URL
-              value: "redis://redis-service:6379/0"
+              value: "redis://:$(REDIS_PASSWORD)@redis-service:6379/0"
             # MinIO
             - name: MINIO_ENDPOINT
               value: "minio-service:9000"
